--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="apple-touch-icon-precomposed" href="https://www.cubix.co/storage/app/media/general/cubix-iphone-retina-favicon-114x114.png">
 </head>
 <body>
+    <header><!--header start-->
 
+    </header><!--header end-->
 </body>
 </html>
