--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 </head>
 <body>
     <header><!--header start-->
-
+        <img src="images/cubix-logo.svg" alt="Cubix.">
+        <nav>
+            <ul>
+                <li><a href="#">Services</a></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
     </header><!--header end-->
 </body>
 </html>
