--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav>
             <ul>
                 <li><a href="#">Services</a></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="#">Solutions</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header><!--header end-->
