--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 </head>
 <body>
     <header><!--header start-->
-        <img src="images/cubix-logo.svg" alt="Cubix.">
-        <nav>
-            <ul>
+        <a href="index.html"><img src="images/cubix-logo.svg" alt="Cubix."></a>
+        <nav><!--nav start-->
+            <ul><!--nav ul start-->
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Solutions</a></li>
                 <li><a href="#">Work</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+            </ul><!--nav ul end-->
+        </nav><!--nav end-->
+        <div class="contact"><!--header contact start-->
+            <a href="tel:886-978-2220">866-977-2220</a>
+            <a href="#"><button id="btnTouch">get in touch</button></a>
+        </div><!--header contact end-->
     </header><!--header end-->
 </body>
 </html>
