--- a/index.html
+++ b/index.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Software Development Company - Product Development Company - Cubix</title>
-    <link rel="icon" type="image/x-icon" href="https://www.cubix.co/storage/app/media/general/favicon.ico">
-    <link rel="icon" type="image/png" href="https://www.cubix.co/storage/app/media/general/cubix-opera-favicon160x160.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://www.cubix.co/storage/app/media/general/cubix-iphone-retina-favicon-114x114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://www.cubix.co/storage/app/media/general/cubix-ipad-favicon-72x72.png">
-    <link rel="apple-touch-icon-precomposed" href="https://www.cubix.co/storage/app/media/general/cubix-iphone-retina-favicon-114x114.png">
-</head>
-<body>
-    <header><!--header start-->
-        <a href="index.html"><img src="images/cubix-logo.svg" alt="Cubix."></a>
-        <nav><!--nav start-->
-            <ul><!--nav ul start-->
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Solutions</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul><!--nav ul end-->
-        </nav><!--nav end-->
-        <div class="contact"><!--header contact start-->
-            <a href="tel:886-978-2220">866-977-2220</a>
-            <a href="#"><button id="btnTouch">get in touch</button></a>
-        </div><!--header contact end-->
-    </header><!--header end-->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>
+      Software Development Company - Product Development Company - Cubix
+    </title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://www.cubix.co/storage/app/media/general/favicon.ico"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://www.cubix.co/storage/app/media/general/cubix-opera-favicon160x160.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="114x114"
+      href="https://www.cubix.co/storage/app/media/general/cubix-iphone-retina-favicon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="72x72"
+      href="https://www.cubix.co/storage/app/media/general/cubix-ipad-favicon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      href="https://www.cubix.co/storage/app/media/general/cubix-iphone-retina-favicon-114x114.png"
+    />
+  </head>
+  <body>
+    <header>
+      <!--header start-->
+      <a href="index.html"><img src="images/cubix-logo.svg" alt="Cubix."/></a>
+      <nav>
+        <!--nav start-->
+        <ul>
+          <!--nav ul start-->
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Solutions</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <!--nav ul end-->
+      </nav>
+      <!--nav end-->
+      <div class="contact">
+        <!--header contact start-->
+        <a href="tel:886-978-2220">866-977-2220</a>
+        <a href="#"><button id="btnTouch">get in touch</button></a>
+      </div>
+      <!--header contact end-->
+    </header>
+    <!--header end-->
+    <main><!--main start-->
+
+    </main><!--main end-->
+  </body>
 </html>
