--- a/index.html
+++ b/index.html
@@ -58,7 +58,27 @@
     </header>
     <!--header end-->
     <main><!--main start-->
-
+        <div class="content"><!--content start-->
+            <h1>Revolutionizing Enterprises digitally</h1>
+            <p>Unlock the potential of enterprise portals by integrating data repositories and content management system into a single system that delivers seamless user experience.</p>
+            <button id="btnTalk">let's talk</button>
+            <div class="trustedBy">
+                <div class="companies">
+                    Trusted by
+                    <img src="images/politico-small.png" alt="">
+                    <img src="images/wall-mart-small.png" alt="">
+                    <img src="images/tissot-small.png" alt="">
+                    <img src="images/sapient-small.png" alt="">
+                </div>
+                <div class="companies">
+                    Awards
+                    <img id="logo" src="images/badge-appfutura.png" alt="">
+                    <img id="logo" src="images/top-mobile-app-developers.png" alt="">
+                    <img id="logo" src="images/badge-clutch.png" alt="">
+                    <img id="logo" src="images/badge-mobile-app-online.png" alt="">
+                </div>
+            </div>
+        </div><!--content end-->
     </main><!--main end-->
   </body>
 </html>
