--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h1>Revolutionizing Enterprises digitally</h1>
             <p>Unlock the potential of enterprise portals by integrating data repositories and content management system into a single system that delivers seamless user experience.</p>
             <button id="btnTalk">let's talk</button>
-            <div class="trustedBy">
+            <div class="trustedBy"><!--trustedBy start-->
                 <div class="companies">
                     Trusted by
                     <img src="images/politico-small.png" alt="">
@@ -77,7 +77,7 @@
                     <img id="logo" src="images/badge-clutch.png" alt="">
                     <img id="logo" src="images/badge-mobile-app-online.png" alt="">
                 </div>
-            </div>
+            </div><!--trustedBy end-->
         </div><!--content end-->
     </main><!--main end-->
   </body>
