[WIP] products content

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
     </main>
     <!--main end-->
     <div class="products"><!--products start-->
-
+      <div class="content">
+        
+      </div>
     </div><!--products end-->
   </body>
 </html>
