[WIP] products productsRow

--- a/index.html
+++ b/index.html
@@ -91,9 +91,15 @@
     </main>
     <!--main end-->
     <div class="products"><!--products start-->
-      <div class="content">
-        
-      </div>
+      <div class="content"><!--products content start-->
+        <p>design. development. consultancy.</p>
+        <h1>
+          Cubix develops result-driven products for entrepreneurs, startups and enterprises.
+        </h1>
+        <div class="productsRow"><!--productsRow start-->
+
+        </div><!--productsRow end-->
+      </div><!--products content end-->
     </div><!--products end-->
   </body>
 </html>
