[chore] productsCol heading

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <g></g>
                   <g></g>
                 </svg>
-                App Development
+                <h3>App Development</h3>
               </div>
               <!--productsCol content end-->
             </div>
