--- a/index.html
+++ b/index.html
@@ -404,5 +404,8 @@
       <!--products content end-->
     </div>
     <!--products end-->
+    <section><!--section start-->
+      
+    </section><!--section end-->
   </body>
 </html>
