--- a/index.html
+++ b/index.html
@@ -405,7 +405,10 @@
     </div>
     <!--products end-->
     <section><!--section start-->
-      
+      <div class="ideas"><!--ideas start-->
+        <h1>We love transforming product ideas to digital realities.</h1>
+        <div class="ideasRow"></div>
+      </div><!--ideas end-->
     </section><!--section end-->
   </body>
 </html>
