--- a/index.html
+++ b/index.html
@@ -404,11 +404,23 @@
       <!--products content end-->
     </div>
     <!--products end-->
-    <section><!--section start-->
-      <div class="ideas"><!--ideas start-->
+    <section>
+      <!--section start-->
+      <div class="ideas">
+        <!--ideas start-->
         <h1>We love transforming product ideas to digital realities.</h1>
-        <div class="ideasRow"></div>
-      </div><!--ideas end-->
-    </section><!--section end-->
+        <div class="ideasRow">
+          <!--ideasRow start-->
+          <img id="img1" src="images/foodly-mobile-1.png" alt="" />
+          <img id="img2" src="images/foodly-mobile-2.png" alt="" />
+          <img id="img3" src="images/foodly-mobile-image-3.png" alt="" />
+          <div class="ideasCol"><!--ideasCol start--></div>
+          <!--ideasCol end-->
+        </div>
+        <!--ideasRow end-->
+      </div>
+      <!--ideas end-->
+    </section>
+    <!--section end-->
   </body>
 </html>
