--- a/index.html
+++ b/index.html
@@ -413,8 +413,14 @@
           <!--ideasRow start-->
           <img id="img1" src="images/foodly-mobile-1.png" alt="" />
           <img id="img2" src="images/foodly-mobile-2.png" alt="" />
-          <img id="img3" src="images/foodly-mobile-image-3.png" alt="" />
-          <div class="ideasCol"><!--ideasCol start--></div>
+          <img id="img3" src="images/foodly-mobile-image-3.png" alt="" /> 
+          <div class="ideasCol"><!--ideasCol start-->
+            <img src="images/foodly-sec-icn.png" alt="">
+            <h3>mobile app</h3>
+            <h1>Foodly - The Hub of Delicious Cuisines</h1>
+            <p>Order breakfast, lunch, or dinner, rate your favorite restaurants and track your order - one platform to curb your hunger.</p>
+            <button class="btnCaseStudy">view case study</button>
+          </div>
           <!--ideasCol end-->
         </div>
         <!--ideasRow end-->
