--- a/index.html
+++ b/index.html
@@ -419,7 +419,38 @@
             <h3>mobile app</h3>
             <h1>Foodly - The Hub of Delicious Cuisines</h1>
             <p>Order breakfast, lunch, or dinner, rate your favorite restaurants and track your order - one platform to curb your hunger.</p>
-            <button class="btnCaseStudy">view case study</button>
+            <a href="#"><button class="btnCaseStudy">view case study</button></a>
+          </div>
+          <!--ideasCol end-->
+        </div>
+        <!--ideasRow end-->
+        <div class="ideasRow">
+          <!--ideasRow start-->
+          
+          <div class="ideasCol"><!--ideasCol start-->
+            <img src="images/foodly-sec-icn.png" alt="">
+            <h3>mobile app</h3>
+            <h1>Foodly - The Hub of Delicious Cuisines</h1>
+            <p>Order breakfast, lunch, or dinner, rate your favorite restaurants and track your order - one platform to curb your hunger.</p>
+            <a href="#"><button class="btnCaseStudy">view case study</button></a>
+          </div>
+          <!--ideasCol end-->
+          <img id="img4" src="images/foodly-mobile-1.png" alt="" />
+          <img id="img5" src="images/foodly-mobile-2.png" alt="" />
+          <img id="img6" src="images/foodly-mobile-image-3.png" alt="" /> 
+        </div>
+        <!--ideasRow end-->
+        <div class="ideasRow">
+          <!--ideasRow start-->
+          <img id="img1" src="images/foodly-mobile-1.png" alt="" />
+          <img id="img2" src="images/foodly-mobile-2.png" alt="" />
+          <img id="img3" src="images/foodly-mobile-image-3.png" alt="" /> 
+          <div class="ideasCol"><!--ideasCol start-->
+            <img src="images/foodly-sec-icn.png" alt="">
+            <h3>mobile app</h3>
+            <h1>Foodly - The Hub of Delicious Cuisines</h1>
+            <p>Order breakfast, lunch, or dinner, rate your favorite restaurants and track your order - one platform to curb your hunger.</p>
+            <a href="#"><button class="btnCaseStudy">view case study</button></a>
           </div>
           <!--ideasCol end-->
         </div>
