[WIP] solutions content

--- a/index.html
+++ b/index.html
@@ -459,8 +459,10 @@
       <!--ideas end-->
     </section>
     <!--section end-->
-    <div class="solutions">
+    <div class="solutions"><!--solutions start-->
+      <div class="content"><!--solutions content start-->
 
-    </div>
+      </div><!--solutions content end-->
+    </div><!--solutions end-->
   </body>
 </html>
