--- a/index.html
+++ b/index.html
@@ -461,7 +461,17 @@
     <!--section end-->
     <div class="solutions"><!--solutions start-->
       <div class="content"><!--solutions content start-->
-
+        <h1>We develop enterprise-grade software solutions for businesses.</h1>
+        <h2>“The team stood out because of their swift response time and patience. Cubix provided one contact person, which helped streamline project management and coordination. Not only did Cubix follow the budget and timeline, the team even offered additional services at no extra charge.”</h2>
+        <div class="name"><!--name start-->
+          <h3>Karen Agresti, Founder</h3>
+        <p>Nomidate</p>
+        </div><!--name end-->
+        <div class="rating">
+          <svg height="40" width="40" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 70.2 79.3"><defs><style>.cls-1{fill:#17313b;}.cls-2{fill:#ff3d2e;}</style></defs><title>C icon</title><path class="cls-1" d="M55.1,57A22.35,22.35,0,0,1,40,62.6c-12.8,0-22.2-9.4-22.2-22.3S26.9,18.4,40,18.4a22.9,22.9,0,0,1,15.2,5.5L58,26.3,70.4,13.9,67.3,11A40.13,40.13,0,0,0,40,.8C17,0.8.3,17.4,0.3,40.2S17.4,80.1,40,80.1A40.14,40.14,0,0,0,67.5,69.7l3-2.8L57.9,54.5Z" transform="translate(-0.3 -0.8)"/><circle class="cls-2" cx="39.1" cy="39.6" r="13.3"/></svg>
+          <p class="pBlue">4.8 Rating on Clutch</p>
+          <p>Top App Developers</p>
+        </div>
       </div><!--solutions content end-->
     </div><!--solutions end-->
   </body>
