--- a/index.html
+++ b/index.html
@@ -474,5 +474,8 @@
         </div>
       </div><!--solutions content end-->
     </div><!--solutions end-->
+    <div class="awards"><!--awards start-->
+
+    </div><!--awards end-->
   </body>
 </html>
