--- a/index.html
+++ b/index.html
@@ -475,7 +475,10 @@
       </div><!--solutions content end-->
     </div><!--solutions end-->
     <div class="awards"><!--awards start-->
+      <h1>Awards & Recognitions</h1>
+      <div class="awardsRow"><!--awardsRow start-->
 
+      </div><!--awardsRow end-->
     </div><!--awards end-->
   </body>
 </html>
