[WIP] awardsCol content

--- a/index.html
+++ b/index.html
@@ -477,7 +477,12 @@
     <div class="awards"><!--awards start-->
       <h1>Awards & Recognitions</h1>
       <div class="awardsRow"><!--awardsRow start-->
-
+        <div class="awardsCol"><!--awardsCol start-->
+          <div class="content">
+            <img src="images/badge-clutch.png" alt="">
+            <h3>Top mobile Application Developers</h3>
+          </div>
+        </div><!--awardsCol end-->
       </div><!--awardsRow end-->
     </div><!--awards end-->
   </body>
