--- a/index.html
+++ b/index.html
@@ -478,10 +478,32 @@
       <h1>Awards & Recognitions</h1>
       <div class="awardsRow"><!--awardsRow start-->
         <div class="awardsCol"><!--awardsCol start-->
-          <div class="content">
+          <div class="content"><!--content start-->
             <img src="images/badge-clutch.png" alt="">
-            <h3>Top mobile Application Developers</h3>
-          </div>
+            <h3>Top Mobile Application Developers</h3>
+            <h3 id="des">Top Mobile Application Developers 2019</h3>
+          </div><!--content end-->
+        </div><!--awardsCol end-->
+        <div class="awardsCol" id="margin-top"><!--awardsCol start-->
+          <div class="content"><!--content start-->
+            <img src="images/badge-goodfirms.png" alt="">
+            <h3>Top Mobile Application Developer</h3>
+            <h3 id="des">Top Mobile Application Developing Companies in 2019</h3>
+          </div><!--content end-->
+        </div><!--awardsCol end-->
+        <div class="awardsCol"><!--awardsCol start-->
+          <div class="content"><!--content start-->
+            <img src="images/badge-mobile-app-online.png" alt="">
+            <h3>E-Commerece App Development</h3>
+            <h3 id="des">Best E-Commerece app development 2018</h3>
+          </div><!--content end-->
+        </div><!--awardsCol end-->
+        <div class="awardsCol" id="margin-top"><!--awardsCol start-->
+          <div class="content"><!--content start-->
+            <img src="images/badge-appfutura.png" alt="">
+            <h3>Top App Developers</h3>
+            <h3 id="des">Top App Developers in Wahingtop 2018</h3>
+          </div><!--content end-->
         </div><!--awardsCol end-->
       </div><!--awardsRow end-->
     </div><!--awards end-->
