--- a/index.html
+++ b/index.html
@@ -507,5 +507,8 @@
         </div><!--awardsCol end-->
       </div><!--awardsRow end-->
     </div><!--awards end-->
+    <div class="partners"><!--partners start-->
+
+    </div><!--partners end-->
   </body>
 </html>
