--- a/index.html
+++ b/index.html
@@ -508,7 +508,12 @@
       </div><!--awardsRow end-->
     </div><!--awards end-->
     <div class="partners"><!--partners start-->
+      <h1>We partner with the world's technology leaders.</h1>
+      <div class="partnersRow"><!--partnersRow start-->
+        <div class="partnersCol"><!--partnersCol start-->
 
+        </div><!--partnersCol end-->
+      </div><!--partnersRow end-->
     </div><!--partners end-->
   </body>
 </html>
