--- a/index.html
+++ b/index.html
@@ -511,7 +511,20 @@
       <h1>We partner with the world's technology leaders.</h1>
       <div class="partnersRow"><!--partnersRow start-->
         <div class="partnersCol"><!--partnersCol start-->
-
+          <img src="images/Google-Developer-Certified-Agency.png" alt="">
+          <h3>Google Devloper Certified Agency</h3>
+        </div><!--partnersCol end-->
+        <div class="partnersCol"><!--partnersCol start-->
+          <img src="images/Adobe-Solution-Partner-Program.png" alt="">
+          <h3>Adobe Solultion Partner Program</h3>
+        </div><!--partnersCol end-->
+        <div class="partnersCol"><!--partnersCol start-->
+          <img src="images/Microsoft-Certified-Consulting-Partner.png" alt="">
+          <h3>Microsoft Certified Consulting Partner</h3>
+        </div><!--partnersCol end-->
+        <div class="partnersCol"><!--partnersCol start-->
+          <img src="images/Amazon-Web-Services-Partner.png" alt="">
+          <h3>Amazon Web Services Partner</h3>
         </div><!--partnersCol end-->
       </div><!--partnersRow end-->
     </div><!--partners end-->
