--- a/index.html
+++ b/index.html
@@ -528,5 +528,9 @@
         </div><!--partnersCol end-->
       </div><!--partnersRow end-->
     </div><!--partners end-->
+    <div class="hr"></div>
+    <footer><!--footer start-->
+
+    </footer><!--footer end-->
   </body>
 </html>
