[feat] footer content

--- a/index.html
+++ b/index.html
@@ -530,7 +530,10 @@
     </div><!--partners end-->
     <div class="hr"></div>
     <footer><!--footer start-->
-
+      <div class="content"><!--content start-->
+        <h1>12 years of building digital products and we are just getting started!</h1>
+        <a href="#"><button id="startAProject">start a project</button></a>
+      </div><!--content end-->
     </footer><!--footer end-->
   </body>
 </html>
