--- a/index.html
+++ b/index.html
@@ -534,6 +534,32 @@
         <h1>12 years of building digital products and we are just getting started!</h1>
         <a href="#"><button id="startAProject">start a project</button></a>
       </div><!--content end-->
+      <div class="addresslinksRow"><!--adresslinksRow start-->
+        <div class="addresslinksCol"><!--addresslinksCol start-->
+          <div class="country">
+            <img src="images/usa-flag-icon.svg" alt="">
+            Florida
+          </div>
+          <p>700 S. Rosemary Ave, Suite 204-118 West Palm Beach, FL 33401</p>
+          <p><a href="#">Direction</a></p>
+        </div><!--addrsslinksCol end-->
+        <div class="addresslinksCol"><!--addresslinksCol start-->
+          <div class="country">
+            <img src="images/pakistan-flag-icon.svg" alt="">
+            Karachi
+          </div>
+          <p>D23, Block 9 Clifton, Karachi, Sindh 75600, Pakistan</p>
+          <p><a href="#">Direction</a></p>
+        </div><!--addrsslinksCol end-->
+        <div class="addresslinksCol"><!--addresslinksCol start-->
+          <div class="country">
+            <img src="images/uae-flag-icon.svg" alt="">
+            Dubai
+          </div>
+          <p>Building 11, Level 7, Bay Square, Business Bay, UAE</p>
+          <p><a href="#">Direction</a></p>
+        </div><!--addrsslinksCol end-->
+      </div><!--addresslinksRow end-->
     </footer><!--footer end-->
   </body>
 </html>
