--- a/index.html
+++ b/index.html
@@ -559,7 +559,27 @@
           <p>Building 11, Level 7, Bay Square, Business Bay, UAE</p>
           <p><a href="#">Direction</a></p>
         </div><!--addrsslinksCol end-->
+        <div class="links"><!--links start-->
+          <h4>Services</h4>
+          <div class="linksRow"><!--linksRow start-->
+            <div class="linksCol"><!--linksCol start-->
+              <ul>
+                <li><a href="#">iPhone App Development</a></li>
+                <li><a href="#">Android App Development</a></li>
+                <li><a href="#">Mobile App Development</a></li>
+              </ul>
+            </div><!--linksCol end-->
+            <div class="linksCol"><!--linksCol start-->
+              <ul>
+                <li><a href="#">Game App Development</a>></li>
+                <li><a href="#">Sharepoint App Development</a></li>
+                <li><a href="#">Blockchain App Development</a></li>
+              </ul>
+            </div><!--linksCol end-->
+          </div><!--linksRow end-->
+        </div><!--links end-->
       </div><!--addresslinksRow end-->
+      <div class="hr"></div>
     </footer><!--footer end-->
   </body>
 </html>
