--- a/index.html
+++ b/index.html
@@ -580,6 +580,9 @@
         </div><!--links end-->
       </div><!--addresslinksRow end-->
       <div class="hr"></div>
+      <div class="socialFooter"><!--socialFooter start-->
+
+      </div><!--socialFooter end-->
     </footer><!--footer end-->
   </body>
 </html>
